<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">健康男女</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">健康男女</string>
    <string name="version">version 1.0</string>
    <string name="name">製作人 Nixon</string>
    <string name="enter">按此進入</string>
    <string name="title_activity_main">主頁</string>
    <string name="setting">個人資料</string>
    <string name="title_activity_setting">設定</string>
    <string name="main">每日所需的卡路里</string>
    <string name="break2">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="snacks">零食</string>
    <string name="names">姓名</string>
    <string name="age">年齡</string>
    <string name="sex">性別</string>
    <string name="height">身高(cm)</string>
    <string name="weight">體重(kg)</string>
    <string name="activity">運動量</string>
    <string name="ps">註: 非常少(沒有運動)		中等(每星期3-5次)</string>
    <string name="ps2">輕微(每星期1-3次)		大量(每星期6-7次)</string>
    <string name="review">總覽</string>
    <string name="reset">重設</string>
    <string name="gendermale">男</string>
    <string name="genderfemale">女</string>
    <string name="little">非常少</string>
    <string name="light">輕微</string>
    <string name="moderate">中等</string>
    <string name="heavy">大量</string>
    <string name="confirm">確定</string>
    <string name="remainder">卡路里上限尚餘</string>
    <string name="title_activity_foodlist">食物列表</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_conclusion">Conclusion</string>
    <string name="title_activity_trial_main">Trial_main</string>
    <string name="title_activity_trial_group">Trial_group</string>
    <string name="title_activity_trial_child">Trial_child</string>
    <string name="title_activity_trial_adapter">Trial_adapter</string>

</resources>
