<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

 
    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_below="@+id/TextView1"
        android:stretchColumns="*"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        
        <TableRow
            android:id="@+id/TableRow01"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal">

            <ImageButton
		        android:id="@+id/imageButton2_Left"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		         android:onClick="onfoodButtonClick"
		        android:src="@drawable/break1" />
            
            <ImageButton
                android:id="@+id/imageButton2_Right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onfoodButtonClick"
                android:src="@drawable/lunch" />
            
        </TableRow>
       
    </TableLayout>

	<TableLayout
	    android:id="@+id/TableLayout02"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/TableLayout01"
	    android:layout_below="@+id/TableLayout01"
	    android:layout_marginTop="31dp"
	    android:stretchColumns="*" >

	    <TableRow
	        android:id="@+id/TableRow02"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical|center_horizontal" >

	        <ImageButton
	            android:id="@+id/imageButton3_Left"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="onfoodButtonClick"
	            android:src="@drawable/dinner" />

	        <ImageButton
	            android:id="@+id/imageButton3_Right"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="onfoodButtonClick"
	            android:src="@drawable/snacks" />
	    </TableRow>
	</TableLayout>

	<TextView
	    android:id="@+id/TextView3"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_alignRight="@+id/TableLayout01"
	    android:layout_below="@+id/TableLayout01"
	    android:layout_marginRight="46dp"
	    android:text="@string/lunch" />

	<TextView
	    android:id="@+id/TextView2"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_alignLeft="@+id/TableLayout01"
	    android:layout_below="@+id/TableLayout01"
	    android:layout_marginLeft="52dp"
	    android:text="@string/break2" />

	<TextView
	    android:id="@+id/TextView5"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_alignLeft="@+id/TextView3"
	    android:layout_below="@+id/TableLayout02"
	    android:text="@string/snacks" />

	<TextView
	    android:id="@+id/TextView4"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_alignBaseline="@+id/TextView5"
	    android:layout_alignBottom="@+id/TextView5"
	    android:layout_alignLeft="@+id/TextView2"
	    android:text="@string/dinner" />

	<Button
	    android:id="@+id/button3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/button1"
	    android:layout_alignBottom="@+id/button1"
	    android:layout_alignLeft="@+id/TextView5"
	    android:text="@string/reset" />

	<Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="50dp"
	    android:onClick="onsettingButtonClick"
	    android:text="@string/setting" />

	<Button
	    android:id="@+id/button2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/button1"
	    android:layout_alignBottom="@+id/button1"
	    android:layout_alignLeft="@+id/TableLayout02"
	    android:layout_marginLeft="14dp"
	    android:text="@string/review" />
	
	
 <TextView
        android:id="@+id/TextView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView5"
        android:text="@string/remainder" />

 <TextView
     android:id="@+id/textView6"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="20dp"
     android:textColor="@color/red"
     android:layout_alignBaseline="@+id/TextView1"
     android:layout_alignBottom="@+id/TextView1"
     android:layout_alignLeft="@+id/button2"
     android:text="TextView" />

 <TextView
     android:id="@+id/TextView1"
     android:layout_width="100dp"
     android:layout_height="30dp"
     android:layout_alignParentTop="true"
     android:layout_alignRight="@+id/button1"
     android:layout_marginTop="21dp"
     android:layout_toRightOf="@+id/textView6"
     android:text="@string/main" />

 <TextView
     android:id="@+id/textView7"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
      android:textSize="20dp"
     android:textColor="@color/red"
     android:layout_alignBaseline="@+id/TextView1"
     android:layout_alignBottom="@+id/TextView1"
     android:layout_toRightOf="@+id/TextView1"
     android:text="TextView" />

 <TextView
     android:id="@+id/textView8"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="20dp"
     android:textColor="@color/red"
     android:layout_alignBaseline="@+id/TextView10"
     android:layout_alignBottom="@+id/TextView10"
     android:layout_alignRight="@+id/button1"
     android:text="TextView" />
       
</RelativeLayout>
